--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,7 @@ body {
 }
 
 .header_heading span {
+  font-family: sans-serif;
   color: transparent;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
@@ -531,7 +532,7 @@ body {
 .image_block {
   position: relative;
 }
-.image_block img {
+.image_cards {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -686,7 +687,7 @@ body {
   height: 56px;
 }
 .video_box {
-  margin-top: 0px;
+  margin-top: 100px;
   margin-bottom: auto;
   width: 100%;
   /* height: auto; */
@@ -698,9 +699,10 @@ body {
 .images_video_overlap {
   white-space: nowrap;
   position: absolute;
-  bottom: -39px;
+  bottom: 50px;
   left: -39px;
 }
+
 
 .main_aticle {
   width: 50%;
@@ -1207,8 +1209,10 @@ body {
   flex-direction: row;
   gap: 24px;
   margin-top: 24px;
+
 }
 .social_networks_links img{
+  cursor: pointer;
   width: 32px;
   height: 32px;
 }
