--- a/styles.css
+++ b/styles.css
@@ -178,12 +178,11 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
   z-index: -1;
 }
 
 .navbar_header {
-  /* padding: 0px 10%; */
 
   display: flex;
   flex-direction: row;
@@ -191,7 +190,6 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
-  /* gap: 24px; */
 }
 .spacer_nav {
   width: 24px;
@@ -1022,6 +1020,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 20px;
 }
 
 .background_footer{
@@ -1031,18 +1030,17 @@ body {
 .main_background{
   width: 100%;
   position: absolute;
+  object-fit: fill;
   padding: 30px 0px;
-  left: 0;
-  top: 0;
   z-index: -1;
 }
 .row_wrapper_heading{
-
+  width: 65%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 .row_wrapper_heading h2{
   color: var(--MRT-App-Headline, #1B1C57);
@@ -1106,12 +1104,12 @@ body {
 
 .image_composition_footer{
   min-width: none;
-  min-width: 189px;
+  min-width: 250px;
   flex-grow: 0.5;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-top: 54px;
+  margin-top: 30px;
 }
 
 .image_composition_footer img{
@@ -1127,7 +1125,6 @@ body {
 
 .footer_main{
   position: relative;
-  /* padding-top: 120px; */
   padding-bottom: 120px;
 }
 .blur_footer_1{
@@ -1160,6 +1157,9 @@ body {
   width: 36px;
   height: 36px;
 }
+.custom_feature{
+  margin-left: 5px;
+}
 .company_footer_info p{
   margin-top: 22px;
   color: var(--MRT-App-Neutral-01, #626687);
@@ -1173,6 +1173,8 @@ body {
   display: flex;
   flex-direction: row;
   gap: 88px;
+  flex-wrap: wrap;
+  justify-content: flex-end; 
 }
 .footer_links_main div{
   display: flex;
